# promptprobe

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: demo.tape  run_a.json  run_b.json
examples/: qa_suite.yaml  summarisation_suite.yaml
src/promptprobe/: __main__.py  cli.py  differ.py  report.py  runner.py  schema.py  scorers.py
tests/: test_cli.py  test_differ.py  test_runner.py  test_schema.py  test_scorers.py
tests/fixtures/: missing_scorer.yaml  valid_suite.yaml
