[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptprobe"
version = "0.1.0"
description = "Lightweight CLI for LLM prompt regression testing."
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "anthropic>=0.25",
    "openai>=1.30",
    "pyyaml>=6",
]

[project.scripts]
promptprobe = "promptprobe.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
